--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="_20">20</string>
     <string name="save">save</string>
     <string name="nfc">Add using NFC</string>
+    <string name="place_you_card_back_of_your_phone">Place you card backside of the phone</string>
 </resources>
